# AQI

./: .gitignore  CONFIGURATION.md  DATABASE_FEATURES.md  DEPLOYMENT.md  Dockerfile  FINAL_SUMMARY.md  Makefile  OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_NEW.md  SYSTEM_SUMMARY.md  app.py  config.py  demo.py  demo_comparison.py  demo_map.html  docker-compose.yml  env.example  nginx.conf  pyproject.toml  quick_test.py  requirements.txt  run.py  run_demo.py  setup.py  start.py  start_scheduler.bat  test_database.py  test_system.py
.streamlit/: config.toml  secrets.toml
backend/: data_processing.py  database.py  fetch_aqi.py  forecast.py  hourly_forecast.py  prediction.py  reporting.py  scheduler.py
data/raw/: initial_aqi.csv  latest_aqi.csv  test_aqi.csv
docs/: AQI_Analysis.ipynb  README.md  requirements.txt
docs/.ipynb_checkpoints/: AQI_Analysis-checkpoint.ipynb
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
frontend/: app.py  visualize.py
frontend/components/: forecast_bar.py  hourly_chart.py
src/: __init__.py
src/aqi_monitoring/: __init__.py
src/aqi_monitoring/core/: __init__.py  config.py
src/aqi_monitoring/models/: __init__.py  aqi_data.py
src/aqi_monitoring/services/: __init__.py  data_service.py
