[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqi-monitoring"
version = "1.0.0"
description = "A comprehensive air quality monitoring system with real-time data collection, analysis, prediction, and reporting capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AQI Monitoring Team", email = "support@aqimonitoring.com"}
]
maintainers = [
    {name = "AQI Monitoring Team", email = "support@aqimonitoring.com"}
]
keywords = [
    "air-quality", "aqi", "monitoring", "environmental", "data-analysis",
    "streamlit", "machine-learning", "prediction", "visualization"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.50.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "pyogrio>=0.8.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.17.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.25.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.31.0",
    "python-decouple>=3.8",
    "openpyxl>=3.1.0",
    "structlog>=23.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings>=0.23.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
    "grafana-api>=1.0.3",
]

[project.urls]
Homepage = "https://github.com/aqimonitoring/aqi-monitoring"
Documentation = "https://aqimonitoring.readthedocs.io/"
Repository = "https://github.com/aqimonitoring/aqi-monitoring.git"
"Bug Tracker" = "https://github.com/aqimonitoring/aqi-monitoring/issues"

[project.scripts]
aqi-monitor = "aqi_monitoring.cli:main"
aqi-fetch = "aqi_monitoring.cli:fetch_data"
aqi-report = "aqi_monitoring.cli:generate_report"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aqi_monitoring = [
    "templates/*.html",
    "static/*.css", 
    "static/*.js",
    "data/*.json",
    "config/*.yaml",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["aqi_monitoring"]
known_third_party = ["streamlit", "pandas", "numpy", "plotly", "folium"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "folium.*",
    "streamlit.*",
    "plotly.*",
    "geopandas.*",
    "shapely.*",
    "pyproj.*",
    "pyogrio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
